tests/ui/higher-ranked/subtype/hr-subtype.bound_a_vs_free_x.stderr
error[E0308]: mismatched types
  --> $DIR/hr-subtype.rs:54:13
   |
LL | / macro_rules! check {
LL | |     ($rev:ident: ($t1:ty, $t2:ty)) => {
LL | |         #[cfg($rev)]
LL | |         fn subtype<'x, 'y: 'x, 'z: 'y>() {
...  |
LL | |             gimme::<$t1>(None::<$t2>);
   | |             ^^^^^^^^^^^^^^^^^^^^^^^^^ one type is more general than the other
...  |
LL | |     };
LL | | }
   | |_- in this expansion of `check!`
...
LL | / check! { bound_a_vs_free_x: (for<'a> fn(&'a u32),
LL | | fn(&'x u32)) }
   | |______________- in this macro invocation
   |
   = note: expected enum `Option<for<'a> fn(&'a u32)>`
              found enum `Option<fn(&u32)>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
